codigo arregladado y optimizado